Revert the upgrade from tailwind 3 to 4
This reverts most of commit 64ce2d6a0755369a3c64820a48c565d7ea6ed6fd.

Filament 3 does not support tailwind 4 and it was
being too difficult to work with on the backend.
It would eventually be fixable but I don't have
the time to fix it and was honestly not enjoying
working on this anymore after that.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,70 +1,5 @@
-@import url(https://fonts.bunny.net/css?family=inter:400|noto-sans:400)
-layer(base);
-@import url(https://fonts.bunny.net/css?family=shrikhand:400|figtree:400)
-layer(base);
-@import 'tailwindcss';
-
-@plugin '@tailwindcss/typography';
-
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-
-@theme {
-  --font-sans:
-    Inter, Figtree, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  --font-display:
-    Shrikhand, Figtree, ui-sans-serif, system-ui, sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-}
-
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
-  }
-}
-
-/*
-  Generate a grid pattern background
-*/
-@utility bg-grid-* {
-    background-image: linear-gradient(
-        to right,
-        --value(--color-*) 1px,
-        transparent 1px
-    ),
-    linear-gradient(to bottom, --value(--color-*) 1px, transparent 1px);
-    background-repeat: repeat;
-}
-
-/*
-  Generate a dots pattern background
-*/
-@utility bg-dots-* {
-    background-image: radial-gradient(
-        --value(--color-*) 1px,
-        transparent 1px
-    );
-    background-repeat: repeat;
-}
-
-@utility bg-size-* {
-    background-size: --value([*]) --value([*]);
-    background-size: --value(--width-*) --value(--height-*);
-}
-
-/* Tailwind x-cloak hide on load */
-[x-cloak] {
-    display: none;
-}
+@import url(https://fonts.bunny.net/css?family=inter:400|noto-sans:400);
+@import url(https://fonts.bunny.net/css?family=shrikhand:400|figtree:400);
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
